--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.7.7",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
